--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -8,7 +8,7 @@
 
 **For a change,** crypto world has been getting nothing but welcome news from America's government.
 
-- **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of ether ETFs to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the token market's second-most popular token via their accounts with traditional stockbrokers.
+- **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of exchange-traded funds (ETFs) holding ether to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the second-most popular crypto token via their accounts with traditional stockbrokers.
 - **On Wednesday,** [the U.S. House passed](https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/) the Financial Innovation and Technology for the 21st Century Act in a bipartisan 279-136 vote. The bill, nicknamed FIT21, seeks to clarify rules for U.S. crypto trading and the enforcement powers delegated to different financial agencies.  
 
 **Why it matters:** The week signaled a major shift in the U.S. political establishment's posture toward crypto since the immediate post-FTX period.
@@ -21,15 +21,15 @@ In retrospect, that approach garnered [a mixed record](https://www.msn.com/en-us
 
 Another major lesson that jumps out for me: Ultimately, the SEC's post-FTX "war on crypto" seems to have inadvertently strengthened crypto's dominant duopoly of Bitcoin and Ethereum.
 
-The top two tokens' combined share of the global crypto market was just under 60% in early November 2022, when FTX went under, according to [CoinMarketCap data](https://coinmarketcap.com/charts/#bitcoin-dominance).
+The top two tokens' combined share of the global crypto market was just under 60% in early November 2022, right before FTX went under, according to [CoinMarketCap data](https://coinmarketcap.com/charts/#bitcoin-dominance).
 
-Now, after all the SEC prosecutions and civil actions in the years since, that figure has risen above 70%, and both tokens are probably going to have ETFs listed in the same Wall Street venues where the public goes to buy shares in General Motors.
+Now, after all the SEC prosecutions and civil actions since, that figure has risen above 70%, and both tokens are probably going to have ETFs listed in the same Wall Street venues where the public goes to buy shares in General Motors.
 
-[TL;DR](https://www.urbandictionary.com/define.php?term=tl%3Bdr) version: This is what a policy utterly backfiring looks like in Washington.
+Translation: This is what a policy utterly backfiring looks like in Washington.
 
-If you look closer, it does make a perverse sort of sense, though. Many of the SEC's actions against the crypto industry have either directly targeted, or at least had a chilling effect, on smaller token projects. Some of them, no doubt, richly [deserved it](https://www.msn.com/en-us/money/companies/sec-alleges-multi-billion-dollar-crypto-fraud-by-terraform-labs-and-co-founder/ar-BB1kwcbu).
+Looking closer, it does make a perverse sort of sense that we would end up here. After all, many of the SEC's actions against the crypto industry have either directly targeted, or at least had a chilling effect on, smaller token projects.
 
-But the crackdown has also led to a wave of [token de-listings](https://www.pymnts.com/cryptocurrency/2023/crypto-delistings-happening-at-record-clip-despite-bitcoin-comeback/) on crypto exchanges, including some projects that perhaps deserved to survive and could have offered legitimate innovation.   
+Some of them, no doubt, richly [deserved it](https://www.msn.com/en-us/money/companies/sec-alleges-multi-billion-dollar-crypto-fraud-by-terraform-labs-and-co-founder/ar-BB1kwcbu). But the crackdown has also led to a wave of [token de-listings](https://www.pymnts.com/cryptocurrency/2023/crypto-delistings-happening-at-record-clip-despite-bitcoin-comeback/) on crypto exchanges, including some projects that perhaps deserved to survive and could have offered legitimate innovation.   
 
 In the meantime, the token market's two biggies just keep chugging along. And the market's ["long tail"](https://www.investopedia.com/terms/l/long-tail.asp) gets hollowed out.
 
