--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -8,7 +8,7 @@
 
 **For a change,** crypto world has been getting nothing but welcome news from America's government.
 
-- **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of exchange-traded funds (ETFs) holding ether to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the second-most popular crypto token via their accounts with traditional stockbrokers.
+- **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of exchange-traded funds (ETFs) holding ether to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the second-most popular cryto token via their accounts with traditional stockbrokers.
 - **On Wednesday,** [the U.S. House passed](https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/) the Financial Innovation and Technology for the 21st Century Act in a bipartisan 279-136 vote. The bill, nicknamed FIT21, seeks to clarify rules for U.S. crypto trading and the enforcement powers delegated to different financial agencies.  
 
 **Why it matters:** The week signaled a major shift in the U.S. political establishment's posture toward crypto since the immediate post-FTX period.
