--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -31,13 +31,13 @@ Looking closer, it does make a perverse sort of sense that we would end up here.
 
 Some of them, no doubt, richly [deserved it](https://www.msn.com/en-us/money/companies/sec-alleges-multi-billion-dollar-crypto-fraud-by-terraform-labs-and-co-founder/ar-BB1kwcbu). But the crackdown has also led to a wave of [token de-listings](https://www.pymnts.com/cryptocurrency/2023/crypto-delistings-happening-at-record-clip-despite-bitcoin-comeback/) on crypto exchanges, including some projects that perhaps deserved to survive and could have offered legitimate innovation.   
 
-In the meantime, the token market's two biggies just keep chugging along. And the market's ["long tail"](https://www.investopedia.com/terms/l/long-tail.asp) gets hollowed out.
+Meanwhile, the token market's two biggies just keep chugging along. And the market's ["long tail"](https://www.investopedia.com/terms/l/long-tail.asp) gets hollowed out.
 
 Frankly, I used to find this a bit  depressing. I used to think a truly flourishing token economy would comprise many different projects blooming at once, not such a concentration behind just two.
 
-But I've since [made my peace](https://peteramckay.medium.com/public-blockchains-rock-afff96e35919) with with the two-headed Bitcoin/Ethereum beast, considering both networks are legitimately public, transparent, and open source. Innovators truly can build upon them without much worry.
+I've since [made my peace](https://peteramckay.medium.com/public-blockchains-rock-afff96e35919) with with the two-headed Bitcoin/Ethereum beast, considering both networks are legitimately public, transparent, and open source. These are traditionally the foundations upon which innovators can build a lot of cool stuff.
 
-That's more than we can say for all the disasters that Big Tech's proprietary apps and platforms hath wrought. And that's not nothing.
+It's also more than we can say for all the disasters that Big Tech's proprietary apps and platforms hath wrought. And that's not nothing.
 
 ### Week in Review: May 19-25, 2024
 - **Grayscale Investments CEO Michael Sonnenshein stepped down.** Peter Mintzberg, who was global head for the crypto asset-management giant, will take over as chief executive. His work is cut out for him as Grayscale has recently seen heavy outflows of investor money into competitors' listed bitcoin funds. ([Wall Street Journal](https://www.wsj.com/finance/grayscale-ceo-michael-sonnenshein-steps-down-bc0680dc?st=7mrmyfcrcmjbann&reflink=desktopwebshare_permalink))
