Editing upcoming drafts

--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -1,41 +1,43 @@
 # tktktk
 ## tktktk
 
-![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
-*Illustration based on photo by Maria Kray via Pixabay*
+![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
+*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
 
 <p><em>By Peter A. McKay</em></p>
 
-
 <!--
 
-Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
+Lede item. ~450 words.
+
+KOL marketing is insidious...
+
+https://www.coindesk.com/opinion/2024/05/23/wake-up-web3-your-marketing-is-fueling-a-bot-epidemic/
+
+https://www.coindesk.com/business/2024/05/09/inside-cryptos-kol-economy-influencer-investors-get-special-treatment-in-token-deals/
 
 -->
 
 ### Week in Review: May 26 to June 1, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- FTX exec Salame sentenced to 7-1/2 years. https://www.msn.com/en-us/money/companies/first-of-bankman-fried-ftx-lieutenants-gets-75-years-in-prison/ar-BB1nbBMc
 
-- tk
-- tk
-- tk
+- https://www.washingtonpost.com/opinions/2024/05/27/russia-disinformation-propaganda-eu-elections/
+
+- https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/
+
+- https://heated.world/p/are-your-internet-habits-killing
+
+- https://decrypt.co/232809/sec-debt-box-case-dismissed
 
 ### Odds & Ends
 
-- A rant about web3 marketing: https://www.coindesk.com/opinion/2024/05/23/wake-up-web3-your-marketing-is-fueling-a-bot-epidemic/
+- **After a three-year research project,** Major League Baseball has incorporated the performance of Negro League players from the 1920s through the 1940s into the sport's statistical canon. As a result, legendary Negro League catcher Bob Gibson became the new holder of several career and single-season records previously held by Ty Cobb, Babe Ruth, and Barry Bonds. Wow. ([Associated Press](https://apnews.com/article/negro-leagues-statistics-4a204a3cac0527ab5be750783fd411df))
 
-- tk
+- **A judge in Washtenaw County, Mich.,**  was shocked to see a man with a suspended driver's license join a court Zoom call while driving a car. 🤦‍♀️ ([CBS News](https://x.com/CBSNews/status/1795972451920400508))
 
-<!-- Re-work boilerplate to include a donation CTA via Bitcoin, Cash, and Venmo.
+_**That's it for now. Thanks for reading the newsletter today!**_
 
+_**To reach me directly with feedback, a story suggestion, or something else, email peter[at]w3w.media.**_
 
-_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
-
-_**Have a comment on the newsletter? Please share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
-
-_**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.media.**_
-
-_**Best wishes for a healthy and productive week ahead.**_  
-
--->
+_**Best wishes for a healthy and productive week ahead.**_ 😉
