--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -1,12 +1,12 @@
 # tktktk
 ## tktktk
 
-![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
+*Illustration based on photo by Maria Kray via Pixabay*
 
 <p><em>By Peter A. McKay</em></p>
 
-<!-- Lede item. Should run ~450 words. -->
+<!-- Lede item. Should run ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in. -->
 
 ### Week in Review: June 2-8, 2024
 
@@ -21,4 +21,8 @@
 - tk
 - tk
 
-<!-- Pickup boilerplate from last week -->
+_**That's it for now. Thanks for reading the newsletter today!**_
+
+_**To reach me directly with feedback, a story suggestion, or something else, email peter[at]w3w.media.**_
+
+_**Best wishes for a healthy and productive week ahead.**_ 😉
