Removing art + updates to news summary

--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -1,38 +1,39 @@
-# tktktk
+# Whither web2?
 ## tktktk
-
-![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
 
 <p><em>By Peter A. McKay</em></p>
 
-<!--
+In very different ways, two recent tech stories highlighted the benefits and, more important, the downsides of web2.
 
-Lede item. ~450 words.
+The first is today's New York Times story by TKTKTK about the TKTKTKTK, tktktktk.
 
-KOL marketing is insidious...
-
-https://www.coindesk.com/opinion/2024/05/23/wake-up-web3-your-marketing-is-fueling-a-bot-epidemic/
-
-https://www.coindesk.com/business/2024/05/09/inside-cryptos-kol-economy-influencer-investors-get-special-treatment-in-token-deals/
-
--->
+The second is the leak of documents that give us new insight into how Google search really works: https://www.theverge.com/2024/5/31/24167119/google-search-algorithm-documents-leak-seo-chrome-clicks | https://www.engadget.com/google-is-putting-more-restrictions-on-ai-overviews-after-it-told-people-to-put-glue-on-pizza-011316780.html
 
 ### Week in Review: May 26 to June 1, 2024
 
-- FTX exec Salame sentenced to 7-1/2 years. https://www.msn.com/en-us/money/companies/first-of-bankman-fried-ftx-lieutenants-gets-75-years-in-prison/ar-BB1nbBMc
+- **ETF updates:** https://cointelegraph.com/news/ether-etf-launch-june-possible-blackrock-amended-s-1 | https://www.coindesk.com/markets/2024/05/30/ether-spot-etfs-to-see-much-lower-demand-than-bitcoin-versions-jpmorgan-says/ | https://www.marketwatch.com/story/blackrocks-bitcoin-etf-on-verge-of-eclipsing-grayscales-fund-4c90e499
 
-- https://www.washingtonpost.com/opinions/2024/05/27/russia-disinformation-propaganda-eu-elections/
+- **Robinhood announced** the release of a new application programming interface (API) that will allow U.S. crypto traders to set up automated strategies. ([Cointelegraph](https://cointelegraph.com/news/robinhood-crypto-trading-api-united-states))
 
-- https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/
+- https://www.theblock.co/post/296949/moonpay-web3-tool-platform
 
-- https://heated.world/p/are-your-internet-habits-killing
+- **The New York Stock Exchange's president** said during a panel discussion at CoinDesk's Consensus conference the the venerable Wall Street trading venue would [consider offering crypto trading](https://www.coindesk.com/business/2024/05/29/nyse-would-consider-crypto-trading-if-regulatory-picture-were-clearer-president-says-at-consensus-2024/) if U.S. regulations were clearer.
 
-- https://decrypt.co/232809/sec-debt-box-case-dismissed
+- **Two big Washington Post stories:** Tech beat writer Drew Harwell reports that TikTok [made an extraordinary offer](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) to the American government in 2022 to let federal officials pick TikTok's U.S. board of directors, monitor its source code, and have access to a "kill switch" that could shut the service down at any time. Harwell reports the Biden administration declined the offer, instead choosing to push ahead with a new law that would force a sale of TikTok outright. Separately, Post columnist Lee Hockstader says Russia is [brazenly spreading disinformation](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) online to influence next month's European Union Parliament elections. The propaganda campaign is likely a harbinger of what U.S. users will see heading into November's presidential election here.  
+
+- **The Block's Elizabeth Napolitano** reports that President Joe Biden’s re-election campaign has [begun reaching out](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) to crypto-industry players over the past two weeks for guidance on crypto policy. The outreach represents a notable shift away from the administration's more adversarial stance toward crypto to date.
+
+- **Ryan Salame, the former chief of FTX's Bahamas unit,** was sentenced by a federal judge in New York to 7-1/2 years in prison. He is the first of exchange founder Sam Bankman-Fried's lieutenants to get jail time in connection with FTX's collapse in late 2022. ([Bloomberg](https://www.msn.com/en-us/money/companies/first-of-bankman-fried-ftx-lieutenants-gets-75-years-in-prison/ar-BB1nbBMc))
+
+- **A federal judge in Utah** dismissed a civil enforcement case brought by the Securities and Exchange Commission against the crypto miner DEBT Box and ordered the regulator to pay $1.8 million in DEBT Box's legal fees. Ouch. ([Decrypt](https://decrypt.co/232809/sec-debt-box-case-dismissed))
+
+- https://www.wired.com/story/roboform-password-3-million-dollar-crypto-wallet/
 
 ### Odds & Ends
 
-- **After a three-year research project,** Major League Baseball has incorporated the performance of Negro League players from the 1920s through the 1940s into the sport's statistical canon. As a result, legendary Negro League catcher Bob Gibson became the new holder of several career and single-season records previously held by Ty Cobb, Babe Ruth, and Barry Bonds. Wow. ([Associated Press](https://apnews.com/article/negro-leagues-statistics-4a204a3cac0527ab5be750783fd411df))
+- **After a three-year research project,** Major League Baseball has incorporated the performance of Negro League players from the 1920s through the 1940s into the sport's statistical canon. As a result, legendary Negro League catcher Bob Gibson became the new holder of several career and single-season MLB records previously held by Ty Cobb, Babe Ruth, and Barry Bonds. Wow. ([Associated Press](https://apnews.com/article/negro-leagues-statistics-4a204a3cac0527ab5be750783fd411df))
+
+- https://www.nytimes.com/2024/05/30/us/san-francisco-sea-lions.html
 
 - **A judge in Washtenaw County, Mich.,**  was shocked to see a man with a suspended driver's license join a court Zoom call while driving a car. 🤦‍♀️ ([CBS News](https://x.com/CBSNews/status/1795972451920400508))
 
