Fleshing out lede item

--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -1,40 +1,32 @@
-# Whither web2?
+# Policing social is hard.
 ## tktktk
 
 <p><em>By Peter A. McKay</em></p>
 
-In very different ways, two recent tech stories highlighted the benefits and, more important, the downsides of web2.
+**Two Washington Post tech stories** last week are worth highighting for anyone concerned about the effect of foreign disinformation on Western democracy. Both provide insight into the ad-hoc methods governments are employing against the problem lately, for better or worse.
 
-The first is today's New York Times story by TKTKTK about the TKTKTKTK, tktktktk.
+Tech beat writer Drew Harwell reports that TikTok [made an extraordinary offer](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) to the American government in 2022 to let federal officials pick TikTok's U.S. board of directors, monitor its source code, and have access to a "kill switch" that could shut the service down at any time.
 
-The second is the leak of documents that give us new insight into how Google search really works: https://www.theverge.com/2024/5/31/24167119/google-search-algorithm-documents-leak-seo-chrome-clicks | https://www.engadget.com/google-is-putting-more-restrictions-on-ai-overviews-after-it-told-people-to-put-glue-on-pizza-011316780.html
+Harwell reports the Biden administration declined the offer, instead choosing to push ahead with a new law that would force a sale of TikTok outright, or else ban it in the U.S. altogether.
+
+Ostensibly, the administration is concerned that TikTok is Chinese-owned, thus could be used by the Chinese Communist Party to spy on or unduly influence Americans. On the other hand, a potential ban could [run afoul](https://peteramckay.medium.com/congress-isnt-going-to-fix-web2-7b1818ea9fc0) of the First Amendment.
+
+Separately, Paris-based columnist Lee Hockstader says Russia is [brazenly spreading disinformation](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) online to influence next month's European Union Parliament elections. The propaganda campaign is likely a harbinger of what U.S. users will see heading into November's presidential election here, Hockstader says.  
+
+On to the rest of the week's headlines, none of them nearly so apocalyptic as the above. I promise...
 
 ### Week in Review: May 26 to June 1, 2024
-
-- **ETF updates:** https://cointelegraph.com/news/ether-etf-launch-june-possible-blackrock-amended-s-1 | https://www.coindesk.com/markets/2024/05/30/ether-spot-etfs-to-see-much-lower-demand-than-bitcoin-versions-jpmorgan-says/ | https://www.marketwatch.com/story/blackrocks-bitcoin-etf-on-verge-of-eclipsing-grayscales-fund-4c90e499
-
-- **Robinhood announced** the release of a new application programming interface (API) that will allow U.S. crypto traders to set up automated strategies. ([Cointelegraph](https://cointelegraph.com/news/robinhood-crypto-trading-api-united-states))
-
-- https://www.theblock.co/post/296949/moonpay-web3-tool-platform
-
-- **The New York Stock Exchange's president** said during a panel discussion at CoinDesk's Consensus conference the the venerable Wall Street trading venue would [consider offering crypto trading](https://www.coindesk.com/business/2024/05/29/nyse-would-consider-crypto-trading-if-regulatory-picture-were-clearer-president-says-at-consensus-2024/) if U.S. regulations were clearer.
-
-- **Two big Washington Post stories:** Tech beat writer Drew Harwell reports that TikTok [made an extraordinary offer](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) to the American government in 2022 to let federal officials pick TikTok's U.S. board of directors, monitor its source code, and have access to a "kill switch" that could shut the service down at any time. Harwell reports the Biden administration declined the offer, instead choosing to push ahead with a new law that would force a sale of TikTok outright. Separately, Post columnist Lee Hockstader says Russia is [brazenly spreading disinformation](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) online to influence next month's European Union Parliament elections. The propaganda campaign is likely a harbinger of what U.S. users will see heading into November's presidential election here.  
-
-- **The Block's Elizabeth Napolitano** reports that President Joe Biden’s re-election campaign has [begun reaching out](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) to crypto-industry players over the past two weeks for guidance on crypto policy. The outreach represents a notable shift away from the administration's more adversarial stance toward crypto to date.
-
+- **President Biden vetoed** legislation that [would have changed](https://www.theblock.co/post/297885/biden-vetoes-bill-overturning-sab-121-says-standard-necessary-for-crypto-innovation) a controversial accounting rule affecting financial firms that hold crypto tokens for customers. But the industry still holds hope for passage of a separate bill [nicknamed FIT21](https://crypto.news/mchenry-pushes-for-senate-approval-of-fit21-crypto-bill/) that would clarify the roles of different federal agencies in regulating crypto. The Block's Elizabeth Napolitano reports that Biden’s re-election campaign has [begun reaching out](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) to industry players over the past two weeks for guidance on crypto policy.
+- **ETF updates:** BlackRock [surpassed](https://www.msn.com/en-us/money/other/blackrock-s-bitcoin-etf-on-verge-of-eclipsing-grayscale-s-fund/ar-BB1nhHcO) rival Grayscale as issuer of the most popular exchange-traded fund on bitcoin, measured by assets under management. Meanwhile, BlackRock is also among a [raft of Wall Street firms](https://coingape.com/breaking-spot-ethereum-etf-issuers-asked-by-sec-to-submit-updated-s-1-filings-by-friday/) jockeying to offer spot ETFs on ether as well, after U.S. regulators recently okayed exchanges to list such funds. One big player [dropped out](https://www.msn.com/en-us/money/savingandinvesting/cathie-woods-ark-investment-drops-plans-for-spot-ether-etf-says-it-will-focus-on-spot-bitcoin-etf-instead/ar-BB1nuhAj) of that race, however: Cathie Woods' Ark Investment Management.
+- **Gemini announced Wednesday** that users of its crypto lending accounts have received all their digital assets back in-kind as part of a settlement with bankrupt partner Genesis. The payments represent a significant milestone in one of the most contentious and closely watched cases from the "crypto winter" that erupted in late 2022. ([CoinDesk](https://www.msn.com/en-us/money/markets/gemini-announces-full-recovery-of-earn-users-digital-assets/ar-BB1ngNXw))
 - **Ryan Salame, the former chief of FTX's Bahamas unit,** was sentenced by a federal judge in New York to 7-1/2 years in prison. He is the first of exchange founder Sam Bankman-Fried's lieutenants to get jail time in connection with FTX's collapse in late 2022. ([Bloomberg](https://www.msn.com/en-us/money/companies/first-of-bankman-fried-ftx-lieutenants-gets-75-years-in-prison/ar-BB1nbBMc))
-
+- **MoonPay launched a new platform** to help consumer-facing brands simplify the web3 experience for their customers. Gucci, Puma, and Mastercard are among the early users of the new platform. ([The Block](https://www.theblock.co/post/296949/moonpay-web3-tool-platform))
+- **Robinhood announced** the release of a new application programming interface (API) that will allow U.S. crypto traders to set up automated strategies. ([Cointelegraph](https://cointelegraph.com/news/robinhood-crypto-trading-api-united-states))
 - **A federal judge in Utah** dismissed a civil enforcement case brought by the Securities and Exchange Commission against the crypto miner DEBT Box and ordered the regulator to pay $1.8 million in DEBT Box's legal fees. Ouch. ([Decrypt](https://decrypt.co/232809/sec-debt-box-case-dismissed))
-
-- https://www.wired.com/story/roboform-password-3-million-dollar-crypto-wallet/
-
+- **Eureka?** Researchers have unlocked a $3 million crypto wallet that had been dormant for 11 years by exploiting a bug in an old version of a password manager. ([Wired](https://www.wired.com/story/roboform-password-3-million-dollar-crypto-wallet/))
 ### Odds & Ends
-
+- **The sea lion population** at Pier 39 on San Francisco’s northern edge just set a new record. The pier's harbor master says the animals were initially drawn to a large school of anchovies near the Golden Gate Bridge, though it is unclear what has kept them around. ([New York Times](https://www.nytimes.com/2024/05/30/us/san-francisco-sea-lions.html))
 - **After a three-year research project,** Major League Baseball has incorporated the performance of Negro League players from the 1920s through the 1940s into the sport's statistical canon. As a result, legendary Negro League catcher Bob Gibson became the new holder of several career and single-season MLB records previously held by Ty Cobb, Babe Ruth, and Barry Bonds. Wow. ([Associated Press](https://apnews.com/article/negro-leagues-statistics-4a204a3cac0527ab5be750783fd411df))
-
-- https://www.nytimes.com/2024/05/30/us/san-francisco-sea-lions.html
-
 - **A judge in Washtenaw County, Mich.,**  was shocked to see a man with a suspended driver's license join a court Zoom call while driving a car. 🤦‍♀️ ([CBS News](https://x.com/CBSNews/status/1795972451920400508))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
