New hed + other copyedits

--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -1,15 +1,15 @@
-# Policing social is hard.
-## tktktk
+# An uphill battle against online propaganda
+## From WaPo, new detail about how the U.S. and Europe are combating a nettlesome challenge
 
 <p><em>By Peter A. McKay</em></p>
 
-**Two Washington Post tech stories** last week are worth highighting for anyone concerned about the effect of foreign disinformation on Western democracy. Both provide insight into the ad-hoc methods governments are employing against the problem lately, for better or worse.
+**Two Washington Post tech stories** last week are worth highighting for anyone concerned about the effect of political disinformation on democracy. Both articles provide insight into the ad-hoc methods Western governments are employing against the problem right now, for better or worse.
 
 Tech beat writer Drew Harwell reports that TikTok [made an extraordinary offer](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) to the American government in 2022 to let federal officials pick TikTok's U.S. board of directors, monitor its source code, and have access to a "kill switch" that could shut the service down at any time.
 
-Harwell reports the Biden administration declined the offer, instead choosing to push ahead with a new law that would force a sale of TikTok outright, or else ban it in the U.S. altogether.
+Harwell reports the Biden administration declined the offer, ultimately choosing instead to push ahead with a new law that would force a sale of TikTok outright, or else ban it in the U.S. altogether.
 
-Ostensibly, the administration is concerned that TikTok is Chinese-owned, thus could be used by the Chinese Communist Party to spy on or unduly influence Americans. On the other hand, a potential ban could [run afoul](https://peteramckay.medium.com/congress-isnt-going-to-fix-web2-7b1818ea9fc0) of the First Amendment.
+Ostensibly, the administration is concerned that TikTok is Chinese-owned, thus could be used by the Chinese Communist Party to spy on or unduly influence American society. On the other hand, a potential ban could [run afoul](https://peteramckay.medium.com/congress-isnt-going-to-fix-web2-7b1818ea9fc0) of the First Amendment.
 
 Separately, Paris-based columnist Lee Hockstader says Russia is [brazenly spreading disinformation](https://www.washingtonpost.com/technology/2024/05/29/tiktok-cfius-proposal-rejected/) online to influence next month's European Union Parliament elections. The propaganda campaign is likely a harbinger of what U.S. users will see heading into November's presidential election here, Hockstader says.  
 
