--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -1,27 +1,55 @@
-# tktktk
-## tktktk
-
-![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
-*Illustration based on photo by Maria Kray via Pixabay*
+# Let's make a deal.
+## Crypto world just saw a surprising flurry of dealmaking on Wall Street. What's going on here?
 
 <p><em>By Peter A. McKay</em></p>
 
-<!-- Lede item. Should run ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in. -->
+**Dealmaking is taking off among crypto companies.** My hunch is that this represents a mixed blessing, for reasons I'll describe further on. But first let's cover some details:
+
+- Robinhood: https://www.reuters.com/markets/deals/robinhood-bets-big-crypto-with-200-million-deal-bitstamp-2024-06-06/ | https://fortune.com/crypto/2024/06/06/robinhood-bitstamp-crypto-deal-200million/ | https://fortune.com/crypto/2024/06/06/robinhood-crypto-bitstamp-sec-warning/ | https://www.wsj.com/business/deals/robinhood-doubles-down-on-crypto-with-deal-for-bitstamp-eade3276
+
+- Baakt may sell itself off. https://www.bloomberg.com/news/articles/2024-06-07/crypto-marketplace-bakkt-said-to-weigh-potential-sale-breakup
+
+- https://www.bloomberg.com/news/articles/2024-06-06/crypto-exchange-kraken-said-to-be-in-talks-for-pre-ipo-fund-raising-round
+
+- https://www.reuters.com/technology/deutsche-bank-ties-up-with-bitpanda-cautious-crypto-shift-2024-06-04/
+
+<!-- Transition: Good news is there's still smart money and innovation going on in blockchain, despite negative or nonexistant PR, long shadow of AI, etc. Bad news is many of these deals are a form of centralization, perhaps akin to formation of oligarchies that dominate web2. -->
 
 ### Week in Review: June 2-8, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- New .blockchain TLD. https://cointelegraph.com/news/unstoppable-domains-blockchain-web3-domain-launch
 
-- tk
-- tk
-- tk
+- Nuklai's HelixVM Launch to Fuel the Next Wave of AI <!-- Pickup from email-->
+
+- Base update: Coinbase's Jesse Pollack tells Bloomberg there's no plan for a Base token. <!-- Holy crap, I love this. Need link to the video... --> | https://www.theblock.co/post/299173/friendtech-to-move-to-new-friendchain-blockchain-in-move-away-from-base
+
+- https://www.nytimes.com/2024/06/06/technology/bnn-breaking-ai-generated-news.html
+
+- OpenAI whistleblower interviewed by NYT: https://www.nytimes.com/2024/06/04/technology/openai-culture-whistleblowers.html
+
+- https://www.coindesk.com/markets/2024/06/07/gamestop-tumbles-40-as-trading-icon-roaring-kitty-returns-to-livestream/ | Who is Keith Gill? https://www.wsj.com/finance/stocks/who-is-keith-gill-the-meme-lord-is-back-c208be91?st=u3bbvzxogcx9o4f&reflink=desktopwebshare_permalink
+
+- Macro update. BOC and ECB rate cuts, US jobs data.  BOC and ECB cut rates. https://www.theblock.co/post/299114/arthur-hayes-says-crypto-bull-market-is-reawakening-amid-boc-and-ecb-rate-cuts | https://www.theblock.co/post/299095/bitcoin-rebounds-from-drop-with-equity-indices-as-strong-us-jobs-data-poses-challenge-to-fed-rate | https://www.theblock.co/post/299095/bitcoin-rebounds-from-drop-with-equity-indices-as-strong-us-jobs-data-poses-challenge-to-fed-rate
+
+- Washington Watch: Trump says he wants to be the "crypto president." <!-- Need link --> May jobs report better than expected. <!-- TKTKTK --> | https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/
+
+- Tienanmen anniversary: https://wsjchina.cmail20.com/t/d-e-etuduit-drjjjyiym-r/ | Twitter share: https://x.com/Lingling_Wei/status/1797978553109373119 | NYT says China's internet is "disappearing" due to censorship. https://www.nytimes.com/2024/06/04/business/china-internet-censorship.html
+
+- Craig Wright ordered to pay plaintiffs' legal bills: https://www.coindesk.com/policy/2024/06/07/copa-seeks-payment-of-85-of-costs-in-craig-wright-case/
+
+- https://www.cnbc.com/2024/06/07/us-millionaire-population.html
 
 ### Odds & Ends
 
-- tk
-- tk
+- **Galaxy Digital announced** it has [tokenized](https://www.galaxy.com/newsroom/galaxy-announces-tokenization-of-the-1708-stradivarius-violin-empress/) a 316-year-old Stradivarius violin.
+
+- **Apollo-era astronaut William Anders** died at the age of 90 in a plane crash [northwest of Seattle](https://www.salon.com/2024/06/07/apollo-8-astronaut-captured-earthrise-photo-dies-in-plane-crash/?in_brief=true). A U.S. Air Force veteran, Anders famously became the first person to orbit the moon, in 1968. During that mission, he snapped the iconic [Earthrise](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/NASA-Apollo8-Dec24-Earthrise.jpg/1920px-NASA-Apollo8-Dec24-Earthrise.jpg) photo that has since become a powerful symbol of mankind's exploration of space.
+
+- **Serious question:** People who use and/or rave about the awesomeness of Apple's AirPod earbuds... How do you not lose them on a weekly basis? I know they've been out for years now, and I will confess I still don't get it. Seems like a massive scam to me. 🤷
 
 _**That's it for now. Thanks for reading the newsletter today!**_
+
+<!-- Insert "about me" copy. -->
 
 _**To reach me directly with feedback, a story suggestion, or something else, email peter[at]w3w.media.**_
 
